@@ -37,6 +37,7 @@ EXTRA_DIST = core/exmpp.erl						\
 	     compat/stringprep.erl					\
 	     compat/tls.erl						\
 	     compat/xml.erl						\
+	     compat/xml_stream.erl					\
 	     examples/echo_client.erl
 
 all-local:
